# libgphoto2-python

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  gp-setup.py.in  gphoto2.pyx  gptest.py  setup.py.in  test-gp.py
